--- a/myGuide/app/src/main/res/drawable/edittext_background.xml
+++ b/myGuide/app/src/main/res/drawable/edittext_background.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="@color/white" />
     <corners android:topRightRadius="20dp" android:bottomRightRadius="20dp" android:topLeftRadius="20dp" android:bottomLeftRadius="20dp" android:radius="15dp" />
-    <stroke android:color="@color/blue" android:width="1dp"/>
+    <stroke android:color="@color/Mint_green" android:width="1dp"/>
 </shape>
