--- a/myGuide/app/src/main/res/layout/activity_chat.xml
+++ b/myGuide/app/src/main/res/layout/activity_chat.xml
@@ -95,7 +95,7 @@
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toEndOf="@+id/ivBack"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profile_icon" />
+        app:srcCompat="@drawable/registration_user" />
 
     <TextView
         android:id="@+id/tvOtherUserName"
