--- a/myGuide/app/src/main/res/layout/activity_chooserole.xml
+++ b/myGuide/app/src/main/res/layout/activity_chooserole.xml
@@ -32,7 +32,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="70dp"
-        android:background="@drawable/student"
+        android:background="@color/white"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
