--- a/myGuide/app/src/main/res/layout/activity_student_home.xml
+++ b/myGuide/app/src/main/res/layout/activity_student_home.xml
@@ -22,8 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-5dp"
-        app:itemIconTint="#40C4FF"
+        app:itemIconTint="@drawable/bottom_nav_color"
         app:itemTextColor="@color/black"
+        app:itemRippleColor="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
