--- a/myGuide/app/src/main/res/layout/fragment_home_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_home_tutor.xml
@@ -61,13 +61,14 @@
 
 
             <TextView
-                android:id="@+id/tvYourStudents"
+                android:id="@+id/tvYourStudentOrTutor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="18dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
                 android:text="Your Students"
-                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,11 +76,15 @@
                 android:id="@+id/tvSeeMoreHomeTutor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:text="See more"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/dropdown_background"
+                android:backgroundTint="@color/Mint_green"
+                android:padding="2dp"
+                android:text="SEE MORE"
+                android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tvYourStudents" />
+                app:layout_constraintTop_toTopOf="@+id/tvYourStudentOrTutor" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvHomeStudents"
@@ -88,8 +93,8 @@
                 android:layout_marginTop="8dp"
                 android:minHeight="200dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/tvYourStudents"
-                app:layout_constraintTop_toBottomOf="@+id/tvYourStudents" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvYourStudentOrTutor" />
 
             <TextView
                 android:id="@+id/empty_view_tutor"
@@ -103,7 +108,7 @@
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvYourStudents" />
+                app:layout_constraintTop_toBottomOf="@+id/tvYourStudentOrTutor" />
 
             <ProgressBar
                 android:id="@+id/progressbar_rvHomeStudents"
@@ -114,7 +119,7 @@
                 android:paddingTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvYourStudents" />
+                app:layout_constraintTop_toBottomOf="@+id/tvYourStudentOrTutor" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
