--- a/myGuide/app/src/main/res/layout/nav_header.xml
+++ b/myGuide/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_marginBottom="20dp"
-    android:background="@color/Mint_green"
+    android:background="@color/half_hour_divider"
     android:gravity="bottom"
     android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
