--- a/myGuide/app/src/main/res/layout/activity_student_setup.xml
+++ b/myGuide/app/src/main/res/layout/activity_student_setup.xml
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
-            android:backgroundTint="@color/blue"
+            android:backgroundTint="@color/Mint_green"
             android:text="Register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Change profile picture"
-            android:textColor="@color/blue"
+            android:textColor="@color/Mint_green"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
