--- a/myGuide/app/src/main/res/layout/change_password_dialog.xml
+++ b/myGuide/app/src/main/res/layout/change_password_dialog.xml
@@ -10,64 +10,65 @@
 
     <EditText
         android:id="@+id/etOldPassword"
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="0dp"
+        android:layout_height="47dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/dropdown_background"
         android:gravity="top"
         android:hint="Enter old password"
         android:inputType="textMultiLine"
         android:maxLines="1"
         android:padding="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etNewPassword"
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/dropdown_background"
         android:gravity="top"
         android:hint="Enter new password"
         android:inputType="textMultiLine"
         android:maxLines="1"
         android:padding="10dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etOldPassword"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etOldPassword" />
 
     <EditText
         android:id="@+id/etConfirmNewPassword"
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/edittext_background"
+        android:background="@drawable/dropdown_background"
         android:gravity="top"
         android:hint="Confirm new password"
         android:inputType="textMultiLine"
         android:maxLines="1"
         android:padding="10dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etNewPassword"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etNewPassword" />
 
     <TextView
         android:id="@+id/tvErrorMessage"
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
         android:gravity="top"
         android:inputType="textMultiLine"
         android:paddingLeft="40dp"
@@ -77,19 +78,21 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etConfirmNewPassword"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etConfirmNewPassword" />
 
     <Button
         android:id="@+id/btnCancelPickTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="100dp"
         android:backgroundTint="#B1ABAB"
         android:gravity="top|left"
         android:text="Cancel"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvErrorMessage" />
 
@@ -97,10 +100,11 @@
         android:id="@+id/btnOkayPickTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:backgroundTint="#40C4FF"
+        android:layout_marginStart="100dp"
+        android:backgroundTint="@color/Mint_green"
         android:text="Ok"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnCancelPickTime" />
 
 
