--- a/myGuide/app/src/main/res/layout/activity_get_all_connected.xml
+++ b/myGuide/app/src/main/res/layout/activity_get_all_connected.xml
@@ -8,83 +8,72 @@
     android:fitsSystemWindows="true"
     android:id="@+id/GetAllConnected">
 
-
-    <androidx.appcompat.widget.Toolbar
-
-        android:id="@+id/allconnected_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:fitsSystemWindows="true"
-        android:minHeight="?attr/actionBarSize"
-        android:paddingLeft="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/getAllConnectedAppBarLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@android:color/black">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.Toolbar
+
+            android:id="@+id/home_toolbar_tutor"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="8dp">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:titleTextColor="@android:color/black">
 
             <ImageView
                 android:id="@+id/allconnected_goback"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="left"
-                android:layout_marginStart="-5dp"
-                android:layout_marginTop="-5dp"
                 android:background="@color/white"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="?attr/actionModeCloseDrawable" />
+                app:srcCompat="?attr/homeAsUpIndicator" />
 
             <TextView
                 android:id="@+id/tvTitleHomeTutor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="-5dp"
-                android:layout_marginTop="-5dp"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:text="Connections"
-                android:textColor="#40C4FF"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/Mint_green"
+                android:textStyle="bold" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
-
-    </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvConnectedUsers"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/allconnected_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/getAllConnectedAppBarLayout" />
 
     <TextView
         android:id="@+id/empty_view_connected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:minHeight="200dp"
         android:paddingTop="20dp"
-        android:visibility="invisible"
-
         android:text="You have no connections"
+
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/allconnected_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/getAllConnectedAppBarLayout" />
 
     <ProgressBar
         android:id="@+id/progressbar_connectedusers"
@@ -94,5 +83,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/allconnected_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/getAllConnectedAppBarLayout" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
