--- a/myGuide/app/src/main/res/layout/activity_tutor_setup.xml
+++ b/myGuide/app/src/main/res/layout/activity_tutor_setup.xml
@@ -218,7 +218,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="40dp"
-            android:backgroundTint="#2196F3"
+            android:backgroundTint="@color/Mint_green"
             android:text="Save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
