--- a/myGuide/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/myGuide/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -100,7 +100,7 @@
         android:layout_marginEnd="32dp"
         android:hint="Repetition"
         android:textColorHint="@color/black"
-        app:boxStrokeColor="#40C4FF"
+        app:boxStrokeColor="@color/Mint_green"
         app:hintTextColor="#0B0A0A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
