--- a/myGuide/app/src/main/res/layout/fragment_home_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_home_tutor.xml
@@ -64,11 +64,11 @@
                 android:id="@+id/tvYourStudentOrTutor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:text="Your Students"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
+                android:layout_marginTop="16dp"
+                android:padding="2dp"
+                android:text="@string/YourStudents"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,10 +79,11 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/dropdown_background"
                 android:backgroundTint="@color/Mint_green"
-                android:padding="2dp"
+                android:padding="4dp"
                 android:text="SEE MORE"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/tvYourStudentOrTutor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tvYourStudentOrTutor" />
 
@@ -91,6 +92,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:background="@color/white"
                 android:minHeight="200dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
