--- a/myGuide/app/src/main/res/layout/fragment_look_for_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_look_for_tutor.xml
@@ -8,44 +8,69 @@
     android:fitsSystemWindows="true"
     android:id="@+id/lookForTutor">
 
-    <androidx.appcompat.widget.Toolbar
-
-        android:id="@+id/search_tutor_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:fitsSystemWindows="true"
-        android:minHeight="?attr/actionBarSize"
-        android:paddingLeft="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@android:color/black">
+        android:id="@+id/search_tutor_toolbar">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.Toolbar
+
+            android:id="@+id/home_toolbar_tutor"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true">
+
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:titleTextColor="@android:color/black">
 
             <TextView
                 android:id="@+id/tv_search_tutor_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="-10dp"
-                android:layout_marginTop="-5dp"
+                android:layout_gravity="center"
                 android:text="Search"
-                android:textColor="#40C4FF"
-                android:textSize="20sp"
+                android:textColor="@color/Mint_green"
+                android:textSize="23sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
+<!--    <androidx.appcompat.widget.Toolbar-->
+
+<!--        android:id="@+id/search_tutor_toolbar"-->
+<!--        android:layout_width="match_parent"-->
+
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/white"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        android:minHeight="?attr/actionBarSize"-->
+<!--        android:paddingLeft="0dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:titleTextColor="@android:color/black">-->
+
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:fitsSystemWindows="true">-->
+
+<!--            -->
+
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 
-    </androidx.appcompat.widget.Toolbar>
+<!--    </androidx.appcompat.widget.Toolbar>-->
 
     <androidx.cardview.widget.CardView
 
@@ -53,6 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="20dp"
         android:minHeight="350dp"
         android:padding="20dp"
@@ -64,7 +90,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/search_tutor_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/search_tutor_toolbar"
+        app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -113,7 +140,8 @@
                 app:smsp_outlinedBoxColor="@color/black"
                 app:smsp_outlinedBoxRadius="10dp"
                 app:smsp_selectedItemListColor="#40C4FF"
-                app:smsp_underlineSize="0dp" />
+                app:smsp_underlineSize="0dp"
+                app:smsp_itemListBackgroundColor="@color/white"/>
 
 
             <Button
@@ -121,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:backgroundTint="#2196F3"
+                android:backgroundTint="@color/Mint_green"
                 android:text="Find"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.495"
