--- a/myGuide/app/src/main/res/layout/fragment_schedule_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_schedule_tutor.xml
@@ -49,11 +49,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/toolbarScheduleTutor"
                 app:primaryColor="@color/white"
-                app:selectedItem_background="@color/white"
+                app:selectedItem_background="@color/Mint_green"
                 app:selectedItem_textColor="@color/red"
                 app:textColor="@color/black"
                 app:todayItem_background="@color/white"
-                app:todayItem_textColor="@color/blue">
+                app:todayItem_textColor="@color/Mint_green">
 
 
             </com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar>
@@ -92,13 +92,14 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/createNewEvent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="16dp"
-            android:backgroundTint="#ffffff"
-            android:src="@android:drawable/ic_input_add" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/createNewEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:backgroundTint="#ffffff"
+        android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/Mint_green" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
