--- a/myGuide/app/src/main/res/layout/item_course.xml
+++ b/myGuide/app/src/main/res/layout/item_course.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:cardBackgroundColor="@color/blue"
+        app:cardBackgroundColor="@color/Mint_green"
         app:cardCornerRadius="5dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
