--- a/myGuide/app/src/main/res/layout/item_tutor.xml
+++ b/myGuide/app/src/main/res/layout/item_tutor.xml
@@ -8,13 +8,13 @@
 
     <ImageView
         android:id="@+id/ivFoundTutorProfile"
-        android:layout_width="81dp"
-        android:layout_height="71dp"
+        android:layout_width="75dp"
+        android:layout_height="67dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profile_icon" />
+        app:srcCompat="@drawable/registration_user" />
 
     <TextView
         android:id="@+id/tvFoundTutorname"
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="Laura"
+        android:text="No name"
+        android:textColor="@android:color/black"
+        android:textSize="17sp"
         app:layout_constraintStart_toEndOf="@+id/ivFoundTutorProfile"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +32,7 @@
         android:id="@+id/tvFoundTutorAbout"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
         android:ellipsize="end"
         android:maxLines="1"
@@ -57,4 +59,14 @@
         android:text="30km"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvFoundTutorAbout" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivFoundTutorProfile"
+        tools:layout_editor_absoluteX="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
