--- a/myGuide/app/src/main/res/layout/message_incoming.xml
+++ b/myGuide/app/src/main/res/layout/message_incoming.xml
@@ -10,33 +10,14 @@
     android:clipToPadding="false">
 
     <TextView
-        android:id="@+id/tvName"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/ivProfileOther"
-        android:layout_alignTop="@+id/ivProfileOther"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="4dp"
-        android:text="Johny Lindsey" />
-
-    <ImageView
-        android:id="@+id/ivProfileOther"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_alignParentLeft="true"
-        android:contentDescription="@string/profile_other"
-        android:src="@mipmap/ic_launcher"
-        app:srcCompat="@drawable/registration_user" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/tvBody"
-        android:layout_below="@+id/tvName"
-        android:layout_alignLeft="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:background="@drawable/message_incoming"
-        android:paddingVertical="12dp"
-        android:paddingHorizontal="16dp"
         android:elevation="2dp"
-        android:textSize="18dp"
-        android:text="Someone else's message" />
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:text="Someone else's message"
+        android:textSize="18dp" />
 </RelativeLayout>
