--- a/myGuide/app/src/main/res/layout/sample_activity.xml
+++ b/myGuide/app/src/main/res/layout/sample_activity.xml
@@ -8,19 +8,38 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/sample_date"
-        style="@style/Base.TextAppearance.AppCompat.Medium"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:paddingLeft="@dimen/small_padding"
-        android:paddingTop="@dimen/large_padding"
-        android:paddingRight="@dimen/small_padding"
-        android:textAlignment="center"
-        tools:text="Jan 16, 2019" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/gobackAvailability"
+            android:layout_width="59dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            app:srcCompat="?attr/homeAsUpIndicator" />
+
+        <TextView
+            android:id="@+id/sample_date"
+            style="@style/Base.TextAppearance.AppCompat.Medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="40dp"
+            android:ellipsize="end"
+            android:paddingLeft="@dimen/small_padding"
+            android:paddingTop="@dimen/large_padding"
+            android:paddingRight="@dimen/small_padding"
+            android:textColor="@color/Mint_green"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:text="Jan 16, 2019" />
+
+
+
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,32 +51,36 @@
         android:paddingBottom="@dimen/large_padding">
 
         <Button
+            android:id="@+id/btnPrevious"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/previous_day"
-            android:id="@+id/btnPrevious"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             tools:ignore="SpUsage" />
 
         <Button
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:onClick="onAddEventClick"
             android:text="@string/add_event"
+            android:textColor="@android:color/black"
             tools:ignore="SpUsage" />
 
         <Button
+            android:id="@+id/btnNext"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/next_day"
-            android:id="@+id/btnNext"
 
+            android:textColor="@android:color/black"
             tools:ignore="SpUsage" />
     </LinearLayout>
 
@@ -69,6 +92,7 @@
         android:layout_marginRight="@dimen/medium_padding"
         android:onClick="onScrollClick"
         android:text="@string/scroll_to"
+        android:textColor="@android:color/black"
         tools:ignore="SpUsage" />
 
     <View
