Polish UI for login and signup activities

--- a/myGuide/app/src/main/res/layout/activity_general_signup.xml
+++ b/myGuide/app/src/main/res/layout/activity_general_signup.xml
@@ -15,7 +15,8 @@
 
         android:layout_marginTop="50dp"
         app:boxBackgroundColor="#F6F3F3"
-        app:boxStrokeColor="#FBFBFB"
+        app:boxStrokeColor="@color/black"
+        app:boxStrokeWidth="0.3dp"
         app:endIconTint="#F6F4F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +41,8 @@
 
         android:layout_marginTop="16dp"
         app:boxBackgroundColor="#F6F3F3"
-        app:boxStrokeColor="#FBFBFB"
+        app:boxStrokeColor="@color/black"
+        app:boxStrokeWidth="0.3dp"
         app:endIconTint="#F6F4F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +69,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="70dp"
         app:boxBackgroundColor="#F6F3F3"
-        app:boxStrokeColor="#FBFBFB"
+        app:boxStrokeColor="@color/black"
+        app:boxStrokeWidth="0.3dp"
         app:endIconTint="#F6F4F4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
@@ -93,7 +96,8 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="70dp"
-        app:boxStrokeColor="#FFFFFF"
+        app:boxStrokeColor="@color/black"
+        app:boxStrokeWidth="0.3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
