--- a/myGuide/app/src/main/res/layout/activity_login.xml
+++ b/myGuide/app/src/main/res/layout/activity_login.xml
@@ -97,7 +97,7 @@
                 android:layout_width="300dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="16dp"
-                android:backgroundTint="#C10505"
+                android:backgroundTint="@color/Mint_green"
                 android:text="Log In"
 
                 app:layout_constraintEnd_toEndOf="@+id/password_text_input_layout"
@@ -157,6 +157,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+            <ProgressBar
+                android:id="@+id/progressBar2"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="43dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="8dp"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ibLinkedinSignin" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
